[package]
name = "p256-index-server"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "2.2.0", features = ["essentials"] }
anyhow = "1"
async-trait = "0.1"
axum = "0.8.9"
base64 = "0.22"
dotenvy = "0.15"
hex = "0.4"
iggy = "0.10.3-edge.1"
k256 = "0.13"
p256 = "0.14"
rand = "0.9"
redis = { version = "0.32", features = ["tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
